BigIntMultiplication optimization